Sticky card is added

--- a/rooms.html
+++ b/rooms.html
@@ -154,7 +154,7 @@
         <div class="container-rooms main-rooms">
             <article>
                 <section class="section-overview">
-                    <h1 class="tundora h2">Underground Hygge</h1>
+                    <h1 class="tundora h2 mt-4">Underground Hygge</h1>
                     <div class="row-profile-pic">
                         <a href="#">Orondo</a>
                         <div class="profile-pic-container">
@@ -232,9 +232,9 @@
                     </div>
                     <br>
                     <a class="main-link font-weight-normal mt-4" href="#">Contact Host</a>
-                    <hr class="my-5">
+                    <hr class="my-4">
                     <div class="container-amenities">
-                        <h5>Amenities</h5>
+                        <h5 class="mb-3">Amenities</h5>
                         <div class="row">
                             <div class="col-6 d-flex">
                                 <img src="./assets/img/homepage/svgs/essentials.svg" width="20px" alt="essentials">
@@ -258,7 +258,7 @@
                         </div>
                         <a class="main-link mt-2 font-weight-normal" href="#">Show all 11 amenities</a>
                     </div>
-                    <hr class="my-5">
+                    <hr class="my-4">
                     <h5>Sleeping arrangements</h5>
                     <div class="bedroom-container">
                         <div class="bedroom">
@@ -267,13 +267,13 @@
                             <p>1 king bed</p>
                         </div>
                     </div>
-                    <hr class="my-5">
+                    <hr class="my-4">
                     <h5>Availability</h5>
                     <p>This host offers a 26% weekly discount</p>
                     <div class="calender">
                     <!--Calender buraya gelecek-->
                     </div>
-                    <hr class="mt-5">
+                    <hr class="mt-4">
                 </section>
                 <!--End of Overview-->
                 
@@ -290,7 +290,7 @@
                     <div class="card card-review">
                         <div class="card-body">
                             <div class="row">
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Communication</span>
                                     <div class="progress-container">
                                         <div class="progress">
@@ -299,7 +299,7 @@
                                         <span class="point">5.0</span>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Check-in</span>
                                     <div class="progress-container">
                                         <div class="progress">
@@ -310,7 +310,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Cleanliness</span>
                                     <div class="progress-container">
                                         <div class="progress">
@@ -319,7 +319,7 @@
                                         <span class="point">4.9</span>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Accuracy</span>
                                     <div class="progress-container">
                                         <div class="progress">
@@ -330,7 +330,7 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Location</span>
                                     <div class="progress-container">
                                         <div class="progress">
@@ -339,7 +339,7 @@
                                         <span class="point">4.9</span>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Accuracy</span>
                                     <div class="progress-container">
                                         <div class="progress">
@@ -351,14 +351,14 @@
                             </div>
                             <hr>
                             <div class="row">
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Stylish space</span>
                                     <div class="progress-container">
                                         <img src="./assets/img/homepage/svgs/chair.svg" alt="chair" width="24px">
                                         <span class="point ml-2">104</span>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Quick responses</span>
                                     <div class="progress-container">
                                         <img src="./assets/img/homepage/svgs/message.svg" alt="message" width="24px">
@@ -367,14 +367,14 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Sparkling clean</span>
                                     <div class="progress-container">
                                         <img src="./assets/img/homepage/svgs/bath.svg" alt="bath" width="24px">
                                         <span class="point ml-2">83</span>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6 d-flex justify-content-between">
+                                <div class="col-12 col-md-6 d-flex justify-content-between mb-2">
                                     <span class="card-review-label">Outstanding hospitality</span>
                                     <div class="progress-container">
                                         <img src="./assets/img/homepage/svgs/heart.svg" alt="heart" width="24px">
@@ -393,7 +393,7 @@
                             </div>
                         </div>
                     </div>
-                    <form class="mt-5 mb-3" action="#">
+                    <form class="mt-4 mb-3" action="#">
                         <div class="form-group search-bar-review">
                             <input type="search" class="form-control my-3 search-reviews" placeholder="Search reviews">
                             <img class="search-icon" src="./assets/img/homepage/svgs/search-icon.svg" width="16px" alt="search-icon">
@@ -512,7 +512,7 @@
                 </section>
                 <!--End of Reviews-->
             </article>
-            <article class="container-card-dates">
+            <article class="container-card-dates mt-4">
                     <div class="card card-dates">
                         <div class="card-body card-body-dates">
                             <h5 class="price">272 &pound; <small>per night</small></h5>
