Slick library is implemented

--- a/homes.html
+++ b/homes.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="assets/styles/scss/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
+    <!--Slick-->
+    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+
 </head>
 <body>
    <!--Header-->
@@ -266,7 +269,148 @@
             </section>
         
             <section class="section-stay container-section">
-
+               <h2 class="title tundora mb-4">300+ stay</h2>
+               <div class="row container-card-places container-card-stay">
+                    <div class="col-12 col-md-6 col-xl-3 col-xxl">
+                        <div class="card card-places">
+                            <a class="slick-prev" href="#">
+                                <div>
+                                    <svg viewBox="0 0 16 16" role="presentation" aria-hidden="true" focusable="false" style="display: block; fill: black;"><path d="m10.8 16c-.4 0-.7-.1-.9-.4l-6.8-6.7c-.5-.5-.5-1.3 0-1.8l6.8-6.7c.5-.5 1.2-.5 1.7 0s .5 1.2 0 1.7l-5.8 5.9 5.8 5.9c.5.5.5 1.2 0 1.7-.2.3-.5.4-.8.4"></path></svg>
+                                </div>
+                            </a>
+                            <div class="card-places-image-container slick-container">
+                                <a href="#">
+                                    <img src="./assets/img/rooms/banner/2.jpg" alt="central">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/img/rooms/banner/2.jpg" alt="central">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/img/rooms/banner/3.jpg" alt="central">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/img/rooms/banner/4.jpg" alt="central">
+                                </a>
+                                <a href="#">
+                                    <img src="./assets/img/rooms/banner/5.jpg" alt="central">
+                                </a>
+                                
+                            </div>
+                            <a class="slick-next" href="#">
+                                <div>
+                                    <svg viewBox="0 0 16 16" role="presentation" aria-hidden="true" focusable="false" style="display: block; fill: black;"><path d="m5.3 16c .3 0 .6-.1.8-.4l6.8-6.7c.5-.5.5-1.3 0-1.8l-6.8-6.7c-.5-.5-1.2-.5-1.7 0s-.5 1.2 0 1.7l5.8 5.9-5.8 5.9c-.5.5-.5 1.2 0 1.7.2.3.5.4.9.4"></path></svg>
+                                </div>
+                            </a>
+                            <div class="card-body card-body-places">
+                                <div class="text-truncate left-truncate">
+                                    <a href="#" class="superhost stretched-link">
+                                        <span>SUPERHOST</span>
+                                    </a>
+                                    <span class="text-muted">Orondo</span>
+                                </div>
+                                <div class="text-truncate">
+                                    <span>Underground Hygge</span>
+                                </div>
+                                <div class="star">
+                                    <img src="./assets/img/homepage/svgs/red-star.svg" alt="red-star" width="10px">
+                                    <span>4,87</span>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 col-xxl">
+                        <div class="card card-places">
+                            <div class="card-places-image-container">
+                                <img src="./assets/img/homepage/stay/sunny.jpg" alt="sunny">
+                                <a href="#" class="stretched-link"></a>
+                            </div>
+                            <div class="card-body card-body-places">
+                                <div class="text-truncate left-truncate">
+                                    <a href="#" class="superhost stretched-link">
+                                        <span>SUPERHOST</span>
+                                    </a>
+                                    <span class="text-muted">Heitzing · Wien</span>
+                                </div>
+                                <div class="text-truncate">
+                                    <span>Sunny apertment near metro station.</span>
+                                </div>
+                                <div class="star">
+                                    <img src="./assets/img/homepage/svgs/red-star.svg" alt="red-star" width="10px">
+                                    <span>4,90</span>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 col-xxl">
+                        <div class="card card-places">
+                            <div class="card-places-image-container">
+                                <img src="./assets/img/homepage/stay/le-sentina.jpg" alt="le-sentina">
+                                <a href="#" class="stretched-link"></a>
+                            </div>
+                            <div class="card-body card-body-places">
+                                <div class="text-truncate left-truncate">
+                                    <a href="#" class="superhost stretched-link">
+                                        <span>SUPERHOST</span>
+                                    </a>
+                                    <span class="text-muted">Tricase</span>
+                                </div>
+                                <div class="text-truncate">
+                                    <span>La Salentina, sea, nature & relax.</span>
+                                </div>
+                                <div class="star">
+                                    <img src="./assets/img/homepage/svgs/red-star.svg" alt="red-star" width="10px">
+                                    <span>4,90</span>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 col-xxl">
+                        <div class="card card-places">
+                            <div class="card-places-image-container">
+                                <img src="./assets/img/homepage/stay/cabin.jpg" alt="cabin">
+                                <a href="#" class="stretched-link"></a>
+                            </div>
+                            <div class="card-body card-body-places">
+                                <div class="text-truncate left-truncate">
+                                    <a href="#" class="superhost stretched-link">
+                                        <span>SUPERHOST</span>
+                                    </a>
+                                    <span class="text-muted">Sechelt</span>
+                                </div>
+                                <div class="text-truncate">
+                                    <span>Cabin #3 - Alfie the A-Frame</span>
+                                </div>
+                                <div class="star">
+                                    <img src="./assets/img/homepage/svgs/red-star.svg" alt="red-star" width="10px">
+                                    <span>4,90</span>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-xl-3 col-xxl">
+                        <div class="card card-places">
+                            <div class="card-places-image-container">
+                                <img src="./assets/img/homepage/stay/london.jpg" alt="london">
+                                <a href="#" class="stretched-link"></a>
+                            </div>
+                            <div class="card-body card-body-places">
+                                <div class="text-truncate left-truncate">
+                                    <a href="#" class="superhost stretched-link">
+                                        <span>SUPERHOST</span>
+                                    </a>
+                                    <span class="text-muted">Battersea · London</span>
+                                </div>
+                                <div class="text-truncate">
+                                    <span>Large twin bed-sitting room by Battersea Park</span>
+                                </div>
+                                <div class="star">
+                                    <img src="./assets/img/homepage/svgs/red-star.svg" alt="red-star" width="10px">
+                                    <span>4,83</span>
+                                </div>
+                            </div>  
+                        </div>
+                    </div>
+               </div>
             </section>
         </article>
    </main>
@@ -398,5 +542,7 @@
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
    <script src="./assets/js/index.js"></script>
+   <!--Slick-->
+   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 </html>
