--- a/index.html
+++ b/index.html
@@ -463,9 +463,10 @@
                         <div class="card card-places">
                             <div class="card-places-image-container">
                                 <img src="./assets/img/homepage/stay/central.jpg" alt="central">
+                                <a href="#" class="stretched-link"></a>
                             </div>
                             <div class="card-body card-body-places">
-                                <div class="text-truncate">
+                                <div class="text-truncate left-truncate">
                                     <a href="#" class="superhost stretched-link">
                                         <span>SUPERHOST</span>
                                     </a>
@@ -481,14 +482,14 @@
                             </div>  
                         </div>
                     </div>
-
                     <div class="col-6 col-xl-4 col-xxl-3">
                         <div class="card card-places">
                             <div class="card-places-image-container">
                                 <img src="./assets/img/homepage/stay/sunny.jpg" alt="sunny">
+                                <a href="#" class="stretched-link"></a>
                             </div>
                             <div class="card-body card-body-places">
-                                <div class="text-truncate">
+                                <div class="text-truncate left-truncate">
                                     <a href="#" class="superhost stretched-link">
                                         <span>SUPERHOST</span>
                                     </a>
@@ -504,14 +505,14 @@
                             </div>  
                         </div>
                     </div>
-
                     <div class="col-6 col-xl-4 col-xxl-3">
                         <div class="card card-places">
                             <div class="card-places-image-container">
                                 <img src="./assets/img/homepage/stay/le-sentina.jpg" alt="le-sentina">
+                                <a href="#" class="stretched-link"></a>
                             </div>
                             <div class="card-body card-body-places">
-                                <div class="text-truncate">
+                                <div class="text-truncate left-truncate">
                                     <a href="#" class="superhost stretched-link">
                                         <span>SUPERHOST</span>
                                     </a>
@@ -527,14 +528,14 @@
                             </div>  
                         </div>
                     </div>
-
                     <div class="col-6 col-xl-4 col-xxl-3">
                         <div class="card card-places">
                             <div class="card-places-image-container">
                                 <img src="./assets/img/homepage/stay/cabin.jpg" alt="cabin">
+                                <a href="#" class="stretched-link"></a>
                             </div>
                             <div class="card-body card-body-places">
-                                <div class="text-truncate">
+                                <div class="text-truncate left-truncate">
                                     <a href="#" class="superhost stretched-link">
                                         <span>SUPERHOST</span>
                                     </a>
@@ -554,9 +555,10 @@
                         <div class="card card-places">
                             <div class="card-places-image-container">
                                 <img src="./assets/img/homepage/stay/london.jpg" alt="london">
+                                <a href="#" class="stretched-link"></a>
                             </div>
                             <div class="card-body card-body-places">
-                                <div class="text-truncate">
+                                <div class="text-truncate left-truncate">
                                     <a href="#" class="superhost stretched-link">
                                         <span>SUPERHOST</span>
                                     </a>
@@ -576,9 +578,10 @@
                         <div class="card card-places">
                             <div class="card-places-image-container">
                                 <img src="./assets/img/homepage/stay/los-angeles.jpg" alt="los-angeles">
+                                <a href="#" class="stretched-link"></a>
                             </div>
                             <div class="card-body card-body-places">
-                                <div class="text-truncate">
+                                <div class="text-truncate left-truncate">
                                     <a href="#" class="superhost stretched-link">
                                         <span>SUPERHOST</span>
                                     </a>
@@ -598,13 +601,16 @@
                         <div class="card card-places">
                             <div class="card-places-image-container">
                                 <img src="./assets/img/homepage/stay/bali.jpg" alt="bali">
+                                <a href="#" class="stretched-link"></a>
                             </div>
                             <div class="card-body card-body-places">
-                                <div class="text-truncate">
+                                <div class="text-truncate left-truncate">
                                     <a href="#" class="superhost stretched-link">
                                         <span>SUPERHOST</span>
                                     </a>
-                                    <span class="text-muted">Bali · Seminyak / Kerobakan</span>
+                                    <span class="text-truncate">
+                                        <span class="text-muted">Bali · Seminyak / Kerobakan</span>
+                                    </span>
                                 </div>
                                 <div class="text-truncate">
                                     <span>Umah Pelangi 2, just 5 min to beach</span>
@@ -620,9 +626,10 @@
                         <div class="card card-places">
                             <div class="card-places-image-container">
                                 <img src="./assets/img/homepage/stay/athens.jpg" alt="athens">
+                                <a href="#" class="stretched-link"></a>
                             </div>
                             <div class="card-body card-body-places">
-                                <div class="text-truncate">
+                                <div class="text-truncate left-truncate">
                                     <a href="#" class="superhost stretched-link">
                                         <span>SUPERHOST</span>
                                     </a>
