--- a/rooms.html
+++ b/rooms.html
@@ -705,7 +705,7 @@
                                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                                 </div>
                                 <div class="form-group">
-                                    <label for="dates">Dates</label>
+                                    <label for="dates">Guests</label>
                                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
                                 </div>
                             </form>
@@ -713,6 +713,7 @@
                         </div>
                     </div>
             </article>
+            <!--End of Card-Dates-->
         </div>
         <article class="container-fixed-bar">
             <div class="card card-fixed">
