Slick is fully implemented on homes page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="assets/styles/scss/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" integrity="sha384-KA6wR/X5RY4zFAHpv/CnoG2UW1uogYfdnP67Uv7eULvTveboZJg0qUpmJZb5VqzN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap" rel="stylesheet">
+<!--Slick-->
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 </head>
 <body>
     <header class="container-fluid header-index">
@@ -367,91 +369,94 @@
 
             <section class="section-recommended container-section">
                 <h2 class="title tundora mb-4">Recommended for you</h2>
-                <div class="row container-card-recommended scrollable-card">
-                    <div class="col-6 col-md-3 col-xxl-2">
-                        <div class="card card-recommended">
-                                <div class="card-recommended-image-container">
-                                    <img src="./assets/img/homepage/recommended/paris.jpg" alt="paris">
+                <div class="row container-card-recommended">
+                    <div class="slick-container-card-travel">
+                            <div class="col-6 col-md-3 col-xxl-2">
+                                    <div class="card card-recommended">
+                                            <div class="card-recommended-image-container">
+                                                <img src="./assets/img/homepage/recommended/paris.jpg" alt="paris">
+                                            </div>
+                                        <div class="card-body card-body-recommended">
+                                            <h3>Paris</h3>
+                                            <span>&pound;82/night average</span>
+                                        </div>
+                                        <a href="#" class="stretched-link"></a>
+                                    </div>
                                 </div>
-                            <div class="card-body card-body-recommended">
-                                <h3>Paris</h3>
-                                <span>&pound;82/night average</span>
-                            </div>
-                            <a href="#" class="stretched-link"></a>
-                        </div>
+                                <div class="col-6 col-md-3 col-xxl-2">
+                                    <div class="card card-recommended">
+                                        <div class="card-recommended-image-container">
+                                            <img src="./assets/img/homepage/recommended/tokyo.jpg" alt="tokyo">
+                                        </div>
+                                        <div class="card-body card-body-recommended">
+                                            <h3>Tokyo</h3>
+                                            <span>&pound;66/night average</span>
+                                        </div>
+                                        <a href="#" class="stretched-link"></a>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-3 col-xxl-2">
+                                    <div class="card card-recommended">
+                                        <div class="card-recommended-image-container">
+                                            <img src="./assets/img/homepage/recommended/london.jpg" alt="london">
+                                        </div>
+                                        <div class="card-body card-body-recommended">
+                                            <h3>London</h3>
+                                            <span>&pound;94/night average</span>
+                                        </div>
+                                        <a href="#" class="stretched-link"></a>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-3 col-xxl-2">
+                                    <div class="card card-recommended">
+                                        <div class="card-recommended-image-container">
+                                            <img src="./assets/img/homepage/recommended/los-angeles.jpg" alt="los-angeles">
+                                        </div>
+                                        <div class="card-body card-body-recommended">
+                                            <h3>Los Angeles</h3>
+                                            <span>&pound;104/night average</span>
+                                        </div>
+                                        <a href="#" class="stretched-link"></a>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-3 col-xxl-2">
+                                    <div class="card card-recommended">
+                                        <div class="card-recommended-image-container">
+                                            <img src="./assets/img/homepage/recommended/barcelona.jpg" alt="barcelona">
+                                        </div>
+                                        <div class="card-body card-body-recommended">
+                                            <h3>Barcelona</h3>
+                                            <span>&pound;60/night average</span>
+                                        </div>
+                                        <a href="#" class="stretched-link"></a>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-3 col-xxl-2">
+                                    <div class="card card-recommended">
+                                        <div class="card-recommended-image-container">
+                                            <img src="./assets/img/homepage/recommended/new-york.jpg" alt="new-york">
+                                        </div>
+                                        <div class="card-body card-body-recommended">
+                                            <h3>New York</h3>
+                                            <span>&pound;95/night average</span>
+                                        </div>
+                                        <a href="#" class="stretched-link"></a>
+                                    </div>
+                                </div>
+                                <div class="col-6 col-md-3 col-xxl-2">
+                                    <div class="card card-recommended">
+                                        <div class="card-recommended-image-container">
+                                            <img src="./assets/img/homepage/recommended/san-fransisco.jpg" alt="san-fransisco">
+                                        </div>
+                                        <div class="card-body card-body-recommended">
+                                            <h3>San Francisco</h3>
+                                            <span>&pound;123/night average</span>
+                                        </div>
+                                        <a href="#" class="stretched-link"></a>
+                                    </div>
+                                </div>
                     </div>
-                    <div class="col-6 col-md-3 col-xxl-2">
-                        <div class="card card-recommended">
-                            <div class="card-recommended-image-container">
-                                <img src="./assets/img/homepage/recommended/tokyo.jpg" alt="tokyo">
-                            </div>
-                            <div class="card-body card-body-recommended">
-                                <h3>Tokyo</h3>
-                                <span>&pound;66/night average</span>
-                            </div>
-                            <a href="#" class="stretched-link"></a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 col-xxl-2">
-                        <div class="card card-recommended">
-                            <div class="card-recommended-image-container">
-                                <img src="./assets/img/homepage/recommended/london.jpg" alt="london">
-                            </div>
-                            <div class="card-body card-body-recommended">
-                                <h3>London</h3>
-                                <span>&pound;94/night average</span>
-                            </div>
-                            <a href="#" class="stretched-link"></a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 col-xxl-2">
-                        <div class="card card-recommended">
-                            <div class="card-recommended-image-container">
-                                <img src="./assets/img/homepage/recommended/los-angeles.jpg" alt="los-angeles">
-                            </div>
-                            <div class="card-body card-body-recommended">
-                                <h3>Los Angeles</h3>
-                                <span>&pound;104/night average</span>
-                            </div>
-                            <a href="#" class="stretched-link"></a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 col-xxl-2">
-                        <div class="card card-recommended">
-                            <div class="card-recommended-image-container">
-                                <img src="./assets/img/homepage/recommended/barcelona.jpg" alt="barcelona">
-                            </div>
-                            <div class="card-body card-body-recommended">
-                                <h3>Barcelona</h3>
-                                <span>&pound;60/night average</span>
-                            </div>
-                            <a href="#" class="stretched-link"></a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 col-xxl-2">
-                        <div class="card card-recommended">
-                            <div class="card-recommended-image-container">
-                                <img src="./assets/img/homepage/recommended/new-york.jpg" alt="new-york">
-                            </div>
-                            <div class="card-body card-body-recommended">
-                                <h3>New York</h3>
-                                <span>&pound;95/night average</span>
-                            </div>
-                            <a href="#" class="stretched-link"></a>
-                        </div>
-                    </div>
-                    <div class="col-6 col-md-3 col-xxl-2">
-                        <div class="card card-recommended">
-                            <div class="card-recommended-image-container">
-                                <img src="./assets/img/homepage/recommended/san-fransisco.jpg" alt="san-fransisco">
-                            </div>
-                            <div class="card-body card-body-recommended">
-                                <h3>San Francisco</h3>
-                                <span>&pound;123/night average</span>
-                            </div>
-                            <a href="#" class="stretched-link"></a>
-                        </div>
-                    </div>
+                   
                 </div>
             </section>
             <!--End of Recommended-->
@@ -938,5 +943,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" 
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="./assets/js/index.js"></script>
+    <!--Slick-->
+   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 </body>
 </html>
