--- a/rooms.html
+++ b/rooms.html
@@ -31,7 +31,7 @@
                                 Search
                             </label>
                             <input type="text" 
-                            class="form-control mt-2 shadow search-bar" placeholder="Search" 
+                            class="form-control mt-2 search-bar" placeholder="Search" 
                             aria-label="Search">
                         </div>
                     </form>
